--- a/HTML/Recibo.html
+++ b/HTML/Recibo.html
@@ -94,7 +94,7 @@
 
 <!--TERMO ADITIVO-->
 <div>
-    <p class="borda2"><em>TERMO ADITIVO AO CONTRATO DE FOMENTO MERCANTIL</em></p>
+    <p class="borda2"><em>RECIBO</em></p>
     <p class="padrao" style="text-align: center;">
         Termo Aditivo ao Contrato de Fomento Mercantil -
         Convencional N&ordm; {{ cedente_NumeroContratoMae }} / {{ operacao_Numero }}
